Continue work on design text