@@ -2,10 +2,10 @@ package com.avereon.xenon.tool;
 
 import com.avereon.event.EventHandler;
 import com.avereon.product.Rb;
-import com.avereon.xenon.RbKey;
 import com.avereon.xenon.ProgramProduct;
 import com.avereon.xenon.ProgramTool;
 import com.avereon.xenon.PropertiesToolEvent;
+import com.avereon.xenon.RbKey;
 import com.avereon.xenon.asset.Asset;
 import com.avereon.xenon.asset.OpenAssetRequest;
 import com.avereon.xenon.tool.settings.SettingOptionProvider;
@@ -19,7 +19,6 @@ import lombok.CustomLog;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * This tool listens for "show properties" and "hide properties" events that
@@ -91,7 +90,7 @@ public class PropertiesTool extends ProgramTool {
 		container.getChildren().addAll( pages.stream().map( p -> {
 			p.setOptionProviders( optionProviders );
 			return new SettingsPanel( p );
-		} ).collect( Collectors.toList() ) );
+		} ).toList() );
 
 		// Add the container to the scroller
 		Fx.run( () -> scroller.setContent( container ) );
